Implement draft of sync API
