# apiserver/model_bookings_listen.go
@@ -1,0 +1,45 @@
+/*
+ * Booking App
+ *
+ * API to access and configure the Booking App
+ *
+ * API version: 1.1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apiserver
+
+import (
+	"time"
+)
+
+type BookingsListen struct {
+
+	// The booking ID.
+	Id int32 `json:"id,omitempty"`
+
+	// The start datetime of the booking in ISO 8601 format.
+	Start time.Time `json:"start,omitempty"`
+
+	// The end datetime of the booking in ISO 8601 format.
+	End time.Time `json:"end,omitempty"`
+
+	// The ID (email) of the organizer.
+	OrganizerID string `json:"organizerID,omitempty"`
+
+	// The name of the organizer.
+	OrganizerName string `json:"organizerName,omitempty"`
+
+	// The status code expecting when actually perform the operation. Some values are - 200: updated (ok)  - 201: created - 204: deleted (no content) - 304: unchanged (not modified) - 400: problem (bad request) - 404: not found - 409: duplicated (conflict) - 422: unprocessable
+	StatusCode int32 `json:"statusCode,omitempty"`
+}
+
+// AssertBookingsListenRequired checks if the required fields are not zero-ed
+func AssertBookingsListenRequired(obj BookingsListen) error {
+	return nil
+}
+
+// AssertBookingsListenConstraints checks if the values respects the defined constraints
+func AssertBookingsListenConstraints(obj BookingsListen) error {
+	return nil
+}
