# apiserver/model_subscribe_bookings_request.go
@@ -1,0 +1,24 @@
+/*
+ * Booking App
+ *
+ * API to access and configure the Booking App
+ *
+ * API version: 1.1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apiserver
+
+type SubscribeBookingsRequest struct {
+	AssetIDs []int32 `json:"assetIDs,omitempty"`
+}
+
+// AssertSubscribeBookingsRequestRequired checks if the required fields are not zero-ed
+func AssertSubscribeBookingsRequestRequired(obj SubscribeBookingsRequest) error {
+	return nil
+}
+
+// AssertSubscribeBookingsRequestConstraints checks if the values respects the defined constraints
+func AssertSubscribeBookingsRequestConstraints(obj SubscribeBookingsRequest) error {
+	return nil
+}
